# Logger

./: CMakeLists.txt  Utils.pro
Logger/: CMakeLists.txt  Logger.pro
Logger/Highlight/: Color.cpp  Color.h
Logger/LogStreamer/: LogStreamer.cpp  LogStreamer.h
Proxy/: CMakeLists.txt  Init.cpp  Proxy.pro  ServiceInterface.cpp  ServiceInterface.h
